ecmascript/parser/tests/typescript-errors/recovery/function/simple.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/recovery/function/simple.ts:1:1
  |
1 | function () {
  | ^^^^^^^^

